# php-fast-profile

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  deny.toml  docker-compose.e2e.yml
.github/workflows/: ci.yml  release.yml
docs/: benchmarks.md  development.md
proto/: profile.proto
scripts/: bench.sh  dump-offsets-dbg.sh  dump-offsets.sh
scripts/ci/: install-php.sh  smoke-pyroscope.sh  smoke-zts.sh  smoke.sh  spin.php
src/: cli.rs  discover.rs  main.rs  offsets.rs  proc.rs  remote.rs  sampler.rs  symbols.rs  target.rs  tls.rs  tui.rs  zend.rs
src/output/: mod.rs  pprof_sink.rs  pyroscope_sink.rs
