[package]
name = "php-fast-profile"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Sampling profiler for PHP 8.0+"
license = "MIT"
readme = "README.md"
repository = "https://github.com/loks0n/php-fast-profile"
homepage = "https://github.com/loks0n/php-fast-profile"
documentation = "https://github.com/loks0n/php-fast-profile/blob/main/README.md"
keywords = ["php", "profiler", "sampling", "performance", "tracing"]
categories = ["development-tools::profiling", "command-line-utilities"]

[[bin]]
name = "pfp"
path = "src/main.rs"

[features]
default = ["tui", "pprof"]
# Live `top`-style display. Pulls in ratatui + crossterm.
tui = ["dep:ratatui", "dep:crossterm"]
# pprof v3 protobuf output. Pulls in prost + flate2 + the build-time
# protoc dependency.
pprof = ["dep:prost", "dep:flate2", "dep:prost-build"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
object = { version = "0.36", default-features = false, features = ["read", "elf", "std"] }
nix = { version = "0.29", features = ["process", "uio", "signal"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
prost = { version = "0.13", optional = true }
flate2 = { version = "1", optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[build-dependencies]
prost-build = { version = "0.13", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
strip = "symbols"
