[package]
name = "php-fast-profile"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Sampling profiler for PHP 8.0+"
license = "MIT"
readme = "README.md"
repository = "https://github.com/loks0n/php-fast-profile"
homepage = "https://github.com/loks0n/php-fast-profile"
documentation = "https://github.com/loks0n/php-fast-profile/blob/main/README.md"
keywords = ["php", "profiler", "sampling", "performance", "tracing"]
categories = ["development-tools::profiling", "command-line-utilities"]

[[bin]]
name = "pfp"
path = "src/main.rs"

[features]
default = ["tui", "pprof", "pyroscope"]
# Live `top`-style display. Pulls in ratatui + crossterm.
tui = ["dep:ratatui", "dep:crossterm"]
# pprof v3 protobuf output. Pulls in prost + flate2 + the build-time
# protoc dependency.
pprof = ["dep:prost", "dep:flate2", "dep:prost-build"]
# Continuous push export to a Pyroscope server (sidecar mode). Reuses the
# pprof builder and adds a small synchronous HTTP client.
pyroscope = ["pprof", "dep:ureq"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
object = { version = "0.36", default-features = false, features = ["read", "elf", "std"] }
nix = { version = "0.29", features = ["process", "uio", "signal", "ptrace"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
prost = { version = "0.13", optional = true }
flate2 = { version = "1", optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
ureq = { version = "2", optional = true }

[build-dependencies]
prost-build = { version = "0.13", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
strip = "symbols"
